# ChangeLog for dev-ruby/dm-core
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Nov 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
  +dm-core-0.9.7.ebuild:
  Initial commit, thanks to Cyril Mougel <cyril.mougel@gmail.com>.
