@@ -1,4 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST dm-core-0.9.7.gem 147968 RMD160 f0ce2f1f0aefc04a5430aaf9b95e4ee17ddea3b0 SHA1 13cff8daa684ceb49e864716529d91ab26ac6b6a SHA256 7b686e8339a36d5a728c3d1eb5e5a23d58e101deef9e0aac46392a99f9d2fee1
+EBUILD dm-core-0.9.7-r1.ebuild 729 RMD160 e655ae173e72f021c087128a88f63700a353b8bd SHA1 96d2414d30b4d703ca099ea661e4cbd8b25a1326 SHA256 ee1055eef3ace965f6a21a829802e1d5ce775e4ce6ae6fa4c45973c833220c8e
 EBUILD dm-core-0.9.7.ebuild 414 RMD160 ec5c3a16d01d046d74db288de4527e9ece7101d1 SHA1 1ef38cd603a170a28b8a39c953fdd658adab81a6 SHA256 79a881eee323c5af1ad972a747d8e4596bde792d6e71fc0158b2f971265c0560
-MISC ChangeLog 271 RMD160 679d4b4dbe03eeff15c767ff1d79fa182f803493 SHA1 e514c4e83c13620ca2d5c40786adfe80716715e7 SHA256 f11e74d971b722fdca0942bd65aeb048398fc1d05bcd0d19c0bd9db3e5d1d0d9
+MISC ChangeLog 440 RMD160 c19843d96f3418130de883edd66893512c038b42 SHA1 9b527e82af13669c3a2778e0950082af05bd42e0 SHA256 f11e94c98c0d5ee1af92232a92b16522c17f6a742df76251607afbe5abb96fc3
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.15 (GNU/Linux)
+
+iF4EAREIAAYFAkxXCtoACgkQZihJkut28SsHRgEAx5F3ITm2JwujZJpa+/a+1h0p
+tDbnDC3M2H8hNdfVdlMA+wZPRk6+vGcGux1XeV3CWhtUIPTRANOj5K7mnqs5Rjc5
+=yKtC
+-----END PGP SIGNATURE-----
